# legoman

./: .gitignore  MANIFEST.in  Makefile  README.md  legoman.py  pyproject.toml  setup.py
content/: index.html  index.j2  styles.css
content/projects/: index.html
content/projects/bar_proj/: index.md
content/projects/foo_proj/: index.md
demo/: Makefile  index.j2  styles.css
demo/content/: index.j2  styles.css
demo/content/projects/bar_proj/: index.md
demo/legoman/templates/: default.j2  project.j2
demo/projects/foo_proj/: index.md  test.py
demo/templates/: base.j2
legoman/: legoman.py  legoman_cgi
templates/: base.html  base.j2  jinja.html  project.html
